# AkilaCXX

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Akila/: CMakeLists.txt
Akila/include/Akila/: Akila.hpp  Test.hpp
Akila/include/Akila/core/: Core.hpp  Coroutine.hpp  Display.hpp  Layer.hpp  Memory.hpp  Metrics.hpp  ResourcePool.hpp  ResourceReference.hpp  ResourcesBucket.hpp  State.hpp  Task.hpp  ThreadPool.hpp  Time.hpp
Akila/include/Akila/datas/: Collection.hpp
Akila/include/Akila/entities/: Transform.hpp
Akila/include/Akila/files/: FileSystem.hpp  Loader.hpp  MeshFile.hpp  MeshLoader.hpp  ResourceFile.hpp  ResourceFileLoader.hpp  ResourceFileParser.hpp  ShaderLoader.hpp  TextureLoader.hpp
Akila/include/Akila/graphics/: Buffer.hpp  Camera.hpp  Material.hpp  Mesh.hpp  MeshPrimitives.hpp  Renderer.hpp  ShaderBuilder.hpp  VAO.hpp
Akila/include/Akila/inputs/: Keyboard.hpp  Mouse.hpp
Akila/include/akila/: akila.hpp
Akila/include/akila/audio/: audio.hpp  audio_buffer.hpp  audio_emitter.hpp  audio_source.hpp
Akila/include/akila/common/: typename.hpp
Akila/include/akila/core/: Core.hpp
Akila/include/akila/coroutine/: coroutine.hpp
Akila/include/akila/default/: components.hpp  loaders.hpp  resources.hpp
Akila/include/akila/ecs/: component_manager.hpp  componentmanager.hpp  coordinator.hpp  ecs.hpp  entity.hpp  entity_id.hpp  entity_manager.hpp  entityid.hpp  entitymanager.hpp  signature.hpp  system.hpp  system_manager.hpp  systemmanager.hpp  typename.hpp
Akila/include/akila/event/: event_callback.hpp  event_dispatcher.hpp  event_listener.hpp  event_queue.hpp  events.hpp  listener.hpp
Akila/include/akila/inputs/: inputs.hpp
Akila/include/akila/layer/: layer.hpp  layers.hpp
Akila/include/akila/math/: math.hpp
Akila/include/akila/memory/: ptr.hpp  ref.hpp
Akila/include/akila/random/: random.hpp
Akila/include/akila/renderer/: Material.hpp  buffer_object.hpp  framebuffer.hpp  material.hpp  renderer.hpp  shader.hpp  shader_preproc.hpp  texture.hpp  vao.hpp
Akila/include/akila/resource/: loader.hpp  resource_map.hpp  resourcemap.hpp  resources.hpp
Akila/include/akila/signal/: listener.hpp  signal_dispatcher.hpp  signal_listener.hpp  signal_queue.hpp  signals.hpp
Akila/include/akila/threadpool/: threadpool.hpp
Akila/include/akila/window/: imgui_handler.hpp  window.hpp  window_events.hpp
Akila/libs/: CMakeLists.txt
Akila/libs/glad/src/: glad.c
Akila/libs/glfw-3.3.2/: CMakeLists.txt
Akila/libs/imgui-docking/: CMakeLists.txt
Akila/libs/imgui-docking/src/: imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_widgets.cpp
Akila/libs/minicoro/src/: minicoro.cpp
Akila/libs/stbimage/: CMakeLists.txt
Akila/resources/: Akila.rc
Akila/src/: Akila.cpp  Test.cpp  akila.cpp
Akila/src/audio/: audio.cpp  audio_buffer.cpp  audio_emitter.cpp  audio_source.cpp
Akila/src/core/: Core.cpp  Coroutine.cpp  Display.cpp  Layer.cpp  Metrics.cpp  ResourcePool.cpp  ResourcesBucket.cpp  State.cpp  Task.cpp  ThreadPool.cpp  Time.cpp
Akila/src/coroutine/: coroutine.cpp
Akila/src/datas/: Collection.cpp
Akila/src/default/components/: camera_component.cpp  static_mesh_component.cpp  transform_component.cpp
Akila/src/default/layers/: debug_layer.cpp
Akila/src/default/loaders/: material_loader.cpp  mesh_loader.cpp  shader_loader.cpp  texture_loader.cpp  uniform_parser.cpp
Akila/src/default/resources/: static_mesh.cpp  static_mesh_primitives.cpp
Akila/src/default/systems/: orbit_camera_system.cpp
Akila/src/ecs/: coordinator.cpp
Akila/src/entities/: Transform.cpp
Akila/src/event/: event_listener.cpp  events.cpp  listener.cpp
Akila/src/files/: FileSystem.cpp  Loader.cpp  MeshLoader.cpp  ResourceFile.cpp  ResourceFileLoader.cpp  ResourceFileParser.cpp  ShaderLoader.cpp  TextureLoader.cpp
Akila/src/graphics/: Buffer.cpp  Camera.cpp  Material.cpp  Mesh.cpp  MeshPrimitives.cpp  Renderer.cpp  ShaderBuilder.cpp  VAO.cpp
Akila/src/graphics/gl/: Buffer.cpp  Error.cpp  FrameBuffer.cpp  Shader.cpp  Texture.cpp  VAO.cpp
Akila/src/graphics/pbr/: Environment.cpp
Akila/src/inputs/: Keyboard.cpp  Mouse.cpp  inputs.cpp
Akila/src/layer/: layer.cpp  layers.cpp
Akila/src/math/: math.cpp
Akila/src/random/: random.cpp
Akila/src/renderer/: buffer_object.cpp  framebuffer.cpp  material.cpp  renderer.cpp  shader.cpp  shader_preproc.cpp  texture.cpp  vao.cpp
Akila/src/resource/: file_system.cpp  loader.cpp  loading_instance.cpp  resources.cpp
Akila/src/signal/: signal_listener.cpp  signals.cpp
Akila/src/threadpool/: threadpool.cpp
Akila/src/time/: time.cpp
Akila/src/window/: imgui_handler.cpp  window.cpp  window_events.cpp
Demo/: CMakeLists.txt
Demo/include/: coro_layer.hpp  kitchen.hpp  kitchen_layer.hpp  mesh_component.hpp  rat_layer.hpp  render_system.hpp  test_layer.hpp  utils_layer.hpp
Demo/include/Demo/: GabLayer.hpp  GabLayer2.hpp  GameLayer.hpp  LoadingLayer.hpp  LoadingState.hpp  MouseCamera.hpp  Net.hpp  PlayLayer.hpp  PlayState.hpp
Demo/resources/: a.json  b.json  bake.json  gabRes.json  kitchen.json  main.json  main.res  rat.json  resources.json
Demo/resources/fonts/: FredokaOne-Regular.fnt
Demo/resources/gab/: deferred.glsl  differed.glsl  flatPBR.glsl  fxaa.glsl  gPass.glsl  model.glb  simple.glsl  ssao.glsl  ssaoBlur.glsl
Demo/resources/materials/: default.mat  loadingScreen.mat  textureTest.mat
Demo/resources/meshs/: cube.glb  palmtree.glb  rat.glb  smooth_cube.glb  sword.glb  terrain.glb  terrain.ob
Demo/resources/shaders/: color.glsl  common.glsl  default.glsl  lightSource.glsl  loadingAnimation.glsl  netShader.glsl  pbr.glsl  pbr_flat.glsl  pbr_functions.glsl  pbr_template.glsl  pbr_tex.glsl  simple.glsl  skybox.glsl  texLit.glsl  textureTest.glsl  unlit.glsl  wireframe.glsl
Demo/src/: GabLayer.cpp  GabLayer2.cpp  GameLayer.cpp  LoadingLayer.cpp  LoadingState.cpp  MouseCamera.cpp  Net.cpp  PlayState.cpp  coro_layer.cpp  kitchen.cpp  kitchen_layer.cpp  main.cpp  rat_layer.cpp  render_system.cpp  test_layer.cpp  utils_layer.cpp
doc/: audio.md  coroutines.md  (+9 more)
libs/minicoro/: CMakeLists.txt
(+331 files in other folders)
