add_subdirectory(stbimage)
include_directories(stbimage/include/)

add_subdirectory(glad)
include_directories(glad/include/)

add_subdirectory(glfw-3.3.2)
include_directories(glfw-3.3.2/include/)

add_subdirectory(glm-0.9.9.9/glm)
include_directories(glm-0.9.9.9)

add_subdirectory(imgui)
include_directories(imgui)

add_subdirectory(assimp-5.0.1)
include_directories(assimp-5.0.1)

